--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 
     <title>Quasar App</title>
+    <style>body{background-color: #403E53}</style>
     <link rel="icon" href="statics/quasar-logo.png" type="image/x-icon">
   </head>
   <body>
